- Fix some spacing issues

--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,10 @@
 
 body {
 	min-height: 100vh;
-	width: 100vw;
+	width: 100%;
 	background-size: cover;
 	background-position: center center;
+	overflow-x: hidden;
 }
 
 a {
@@ -31,6 +32,8 @@ main#container {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+	padding-top: 2rem;
+	padding-bottom: 2rem;
 }
 
 #logo-wrapper {
@@ -341,9 +344,6 @@ div#apps {
 
 /* Mobile Styles */
 @media (max-width: 768px) {
-	main#container {
-		padding-top: 2rem;
-	}
 
 	#logo-wrapper {
 		height: 75px;
